<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    tools:context=".Register"
    android:orientation="vertical">


    <EditText
        android:id="@+id/username"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/textstyle"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        android:textColorHint="#0E0E0E"
        app:layout_constraintBottom_toTopOf="@+id/registerNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/registerNumber"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/textstyle"
        android:ems="10"
        android:hint="@string/registerNumber"
        android:inputType="numberSigned"
        android:paddingLeft="6dp"
        android:textColorHint="#151515"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/usercgpa"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/textstyle"
        android:ems="10"
        android:hint="@string/userCGPA"
        android:inputType="numberDecimal"
        android:paddingLeft="6dp"
        android:textColorHint="#090909"
        app:layout_constraintBottom_toTopOf="@+id/userid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerNumber" />

    <EditText
        android:id="@+id/userid"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/textstyle"
        android:ems="10"
        android:hint="@string/userid"
        android:inputType="textEmailAddress"
        android:paddingLeft="6dp"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usercgpa" />

    <EditText
        android:id="@+id/password"
        android:layout_width="285dp"
        android:layout_height="50dp"
        android:layout_marginStart="58dp"
        android:layout_marginLeft="58dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:background="@drawable/textstyle"
        android:ems="10"
        android:hint="@string/userPassword"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        android:textColorHint="#131313"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid" />

    <Button
        android:id="@+id/login"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="121dp"
        android:layout_marginRight="121dp"
        android:background="@drawable/borderstyle"
        android:hint="@string/register"
        android:textColor="#131313"
        android:textColorHint="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/alreadyuser"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="78dp"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="120dp"
        android:layout_marginRight="120dp"
        android:layout_marginBottom="104dp"
        android:background="@drawable/borderstyle"
        android:hint="@string/alreadyUser"
        android:textColorHint="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


</androidx.constraintlayout.widget.ConstraintLayout>