<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_design"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/userid"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="203dp"
        android:layout_marginRight="64dp"
        android:background="@drawable/textstyle"
        android:drawableLeft="@drawable/ic_action_user"
        android:hint="@string/userid"
        android:inputType="textPersonName"
        android:paddingLeft="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginStart="57dp"
        android:layout_marginLeft="57dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="47dp"
        android:background="@drawable/textstyle"
        android:drawableLeft="@drawable/ic_action_password"
        android:ems="10"
        android:hint="@string/userPassword"
        android:inputType="textPassword"
        android:paddingLeft="6dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userid"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="85dp"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="118dp"
        android:layout_marginRight="118dp"
        android:background="@drawable/borderstyle"
        android:hint="@string/login"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/register"
        android:layout_width="208dp"
        android:layout_height="51dp"
        android:layout_marginStart="90dp"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="115dp"
        android:layout_marginRight="115dp"
        android:layout_marginBottom="196dp"
        android:background="@drawable/borderstyle"
        android:hint="@string/newUser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />
</androidx.constraintlayout.widget.ConstraintLayout>